@@ -106,9 +106,9 @@ class BassoContinuo(Cello):
                     "#'direction = #DOWN", b)
         ly.dom.LineComment(_("Figures follow here."), b)
         ly.dom.BlankLine(b)
-        s = ly.dom.Sim(data.nodes[0][-1])
-        s.append(data.nodes[0][-1][-2])
-        ly.dom.Identifier(a.name, s)
+        figbass = ly.dom.FiguredBass()
+        ly.dom.Identifier(a.name, figbass)
+        data.nodes.append(figbass)
     
 
 register(
